syntax = 'proto3';
package api;
option go_package = "github.com/armadaproject/armada/pkg/api";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";


message ExecutorCordonRequest {
  string name = 1;
  string reason = 2;
}

message ExecutorUncordonRequest {
  string name = 1;
  string reason = 2;
}

service ControlPlaneOperations {
  rpc CordonExecutor (ExecutorCordonRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/v1/executor/cordon"
      body: "*"
    };
  }
  rpc UncordonExecutor (ExecutorUncordonRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/v1/executor/uncordon"
      body: "*"
    };
  }
}
